Tidied sections & fixed white space input error.

--- a/css/_styles.css
+++ b/css/_styles.css
@@ -26,7 +26,7 @@ body {
 .email__list {
   display: flex;
   width: 100vw;
-  height: 50px;
+  height: 100%;
   background-color: #4C5F6B;
   margin: 0px;
   padding: 0px;
