--- a/scss/partials/_display__container.scss
+++ b/scss/partials/_display__container.scss
@@ -9,11 +9,10 @@
 .email__list{
     display: flex;
     width: 100vw;
-    height: 50px;
+    height: 100%;
     background-color: #4C5F6B;
     margin: 0px;
     padding: 0px;
-
 
     div{
         width: 200px;
